2001-12-09  Christopher Blizzard  <blizzard@redhat.com>

	* glib/gmessages.h: Add pragma that will prevent warnings when you
	are not using -std=99 and newer gcc compilers.  Patch from Red
	Hat's gtk+ 1.2 rpm.

2001-12-06  Darin Adler  <darin@bentspoon.com>

	* glib/gmacros.h: Do the same for "pure".

2001-12-06  Matthias Clasen  <matthiasc@poet.de>

	The following patch corrects some function attributes. (#61780)

	* glib/ghash.h (g_int_equal, g_int_hash): These are not const.

	* glib/glibintl.h (_glib_gettext): Add G_GNUC_FORMAT(1).

	* glib/gmacros.h: Use reserved symbols in function attribute macros.

2001-12-06  Matthias Clasen  <matthiasc@poet.de>

	The following patch avoids manual printf()-format parsing 
	if a C99-conforming vsnprintf() is available. (#55106)

	* acinclude.m4 (AC_FUNC_VSNPRINTF_C99): New macro to test for a
	C99 conforming vsnprintf.

	* configure.in: Use AC_FUNC_VSNPRINTF_C99. 

	* glib/gmessages.c (g_printf_string_upper_bound): Use C99 vsnprintf().
	
2001-12-05  Sven Neumann  <sven@gimp.org>

	* glib/gtree.c (g_tree_foreach): mention the fact that the tree is
	traversed in sorted order.

2001-12-03  Manish Singh  <yosh@gimp.org>

	* tests/module-test.c: g_module_symbol takes a gpointer *, not just
	a gpointer

	* tests/libmoduletestplugin_a.c: here too

2001-11-29  Havoc Pennington  <hp@redhat.com>

	* glib/gtree.c (g_tree_foreach):
	* glib/ghash.c (g_hash_table_foreach): 

	Add notes about how you shouldn't modify these data structures as
	you iterate over them.
	
Thu Nov 29 11:16:03 2001  Owen Taylor  <otaylor@redhat.com>

	* HACKING: Update (#65721, Dave Neary)

2001-11-28  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* glib/gdate.c: Fixed wrong order in conversion.

Wed Nov 28 18:34:22 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/gmain.[ch]: Rename (private) GSource.id and 
	id parameter to g_main_context_find_source_by_id()
	to avoid problems with Objective C where 'id' is 
	a keyword. (#65616)
